--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 - title: "Projects"
   url: /
-- title: "Reel"
-  url: /reel
+# - title: "Reels"
+#   url: /reels
 - title: "About"
   url: /about
