--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,8 @@
 #   url: /reels
 - title: "Lighting"
   url: /lighting
+- title: "Illustration"
+  url: /illustration
 - title: "VFX"
   url: /vfx
 - title: "About"
